Think now working ok
- Diversity of outputs qualitatively matches the selection coefficients being put in

--- a/src/main_testing.ipynb
+++ b/src/main_testing.ipynb
@@ -1243,33 +1243,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({1: 3, 3: 2, 6: 2, 7: 2, 8: 1})\n",
+      "Counter({3: 3, 6: 3, 8: 2, 1: 2})\n"
+     ]
+    }
+   ],
    "source": [
-    "aPopulation = Bentley.createInitialPopulation(250, 250)\n",
-    "bPopulation = FrequencyDependent.populationReproduceMoran(aPopulation, 0.004, 0)"
+    "import copy\n",
+    "aNumGenerations = 10\n",
+    "aPopulation = Bentley.createInitialPopulation(10, 10)\n",
+    "a = aPopulation.getAllFreq()\n",
+    "lAdded = np.zeros(aNumGenerations, dtype='int')\n",
+    "lKilled = np.zeros(aNumGenerations, dtype='int')\n",
+    "print(aPopulation.getAllFreq())\n",
+    "lPops = []\n",
+    "lPops.append(copy.deepcopy(aPopulation))\n",
+    "for generations in range(aNumGenerations):\n",
+    "    aPopulation = copy.deepcopy(aPopulation)\n",
+    "    aPopSize = aPopulation.getPopSize()\n",
+    "    weighted_choices = aPopulation.getAllFreq()\n",
+    "    p = 1 + (np.array(weighted_choices.values()) /\n",
+    "                 float(sum(weighted_choices.values())) * 0)\n",
+    "    p = p / sum(p)\n",
+    "    aParent_number = np.random.choice(weighted_choices.keys(), size=1, p=p)[0]\n",
+    "    aIndividual = Bentley.createOffspring_simple(aParent_number, 0.01,\n",
+    "                                                 aPopulation)\n",
+    "    aPopulation.addIndividual(aIndividual)\n",
+    "    lParents = list(aPopulation.getIndividuals())\n",
+    "    lAdded[generations] = aIndividual.getNumber()\n",
+    "    bRand = np.random.randint(aPopSize)\n",
+    "    aPopulation.killIndividual(lParents[bRand])\n",
+    "    lKilled[generations] = lParents[bRand].getNumber()\n",
+    "    aPopulation.calculateAllFreq()\n",
+    "    lPops.append(copy.deepcopy(aPopulation))\n",
+    "print(aPopulation.getAllFreq())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "222"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({8: 5, 1: 2, 6: 2, 3: 1})\n",
+      "Counter({8: 4, 1: 3, 7: 2, 6: 1})\n",
+      "Counter({3: 3, 6: 3, 8: 2, 1: 2, 7: 0})\n"
+     ]
     }
    ],
    "source": [
+    "c = collections.Counter(lAdded)\n",
+    "d = collections.Counter(lKilled)\n",
+    "a = a + c\n",
+    "a.subtract(d)\n",
+    "\n",
+    "print(c)\n",
+    "print(d)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({3: 2, 8: 2, 1: 1, 2: 1, 5: 1, 6: 1, 7: 1, 9: 1})\n",
+      "Counter({8: 3, 1: 1, 2: 1, 3: 1, 5: 1, 6: 1, 7: 1, 9: 1})\n",
+      "Counter({8: 3, 3: 2, 1: 1, 2: 1, 5: 1, 6: 1, 7: 1})\n",
+      "Counter({8: 3, 2: 2, 3: 2, 5: 1, 6: 1, 7: 1})\n",
+      "Counter({2: 2, 3: 2, 5: 2, 8: 2, 6: 1, 7: 1})\n",
+      "Counter({3: 3, 5: 2, 8: 2, 2: 1, 6: 1, 7: 1})\n",
+      "Counter({8: 3, 3: 2, 5: 2, 2: 1, 6: 1, 7: 1})\n",
+      "Counter({5: 3, 3: 2, 8: 2, 2: 1, 6: 1, 7: 1})\n",
+      "Counter({5: 3, 8: 3, 2: 1, 3: 1, 6: 1, 7: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(generations):\n",
+    "    print(lPops[i].getAllFreq())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8 3 2 5 3 8 5 8 3 2]\n",
+      "[8 6 8 6 5 5 3 2 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lAdded)\n",
+    "print(lKilled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({5: 3, 8: 2, 2: 2, 3: 2, 6: 1})\n",
+      "8\n",
+      "Counter({5: 3, 2: 2, 3: 2, 8: 1, 6: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(aPopulation.getAllFreq())\n",
+    "lParents = aPopulation.getIndividuals()\n",
+    "print(lParents[5].getNumber())\n",
+    "aPopulation.killIndividual(lParents[5])\n",
+    "aPopulation.calculateAllFreq()\n",
+    "print(aPopulation.getAllFreq())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.1  0.1  0.1  0.1  0.2  0.2  0.2]\n",
+      "[ 0.10060976  0.10060976  0.10060976  0.10060976  0.19918699  0.19918699\n",
+      "  0.19918699]\n"
+     ]
+    }
+   ],
+   "source": [
+    "aPopulation = Bentley.createInitialPopulation(10, 10)\n",
     "weighted_choices = aPopulation.getAllFreq()\n",
-    "random.choice(list(weighted_choices.elements()))"
+    "p = (np.array(weighted_choices.values()) / float(sum(weighted_choices.values())))\n",
+    "print(p)\n",
+    "p = p * (1 - 0.1 * p)\n",
+    "p = p / sum(p)\n",
+    "print(p)"
    ]
   },
   {
